# adas-camel-ai-hw3

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: agents.py  main.py  sample_agent.py  workforce.py
