[project]
name = "camelai-hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "Jyrko",email = "uriydemoshenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "camel-ai[all] (>=0.2.62,<0.3.0)"
]

[too.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
